// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb should render 1`] = `
<Breadcrumb
  className="parent-class"
>
  <nav
    aria-label="Breadcrumb"
    className="parent-class"
  >
    <ol
      className="bx--breadcrumb"
    >
      <BreadcrumbItem
        className="some-class"
        href="www.carbondesignsystem.com"
      >
        <li
          className="bx--breadcrumb-item some-class"
        >
          <Link
            href="www.carbondesignsystem.com"
          >
            <Text
              as="a"
              className="bx--link"
              href="www.carbondesignsystem.com"
              rel={null}
            >
              <a
                className="bx--link"
                dir="auto"
                href="www.carbondesignsystem.com"
                rel={null}
              >
                Breadcrumb 1
              </a>
            </Text>
          </Link>
        </li>
      </BreadcrumbItem>
    </ol>
  </nav>
</Breadcrumb>
`;

exports[`Breadcrumb should support rendering the current page 1`] = `
<Breadcrumb>
  <nav
    aria-label="Breadcrumb"
  >
    <ol
      className="bx--breadcrumb"
    >
      <BreadcrumbItem
        href="#a"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            href="#a"
          >
            <Text
              as="a"
              className="bx--link"
              href="#a"
              rel={null}
            >
              <a
                className="bx--link"
                dir="auto"
                href="#a"
                rel={null}
              >
                A
              </a>
            </Text>
          </Link>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        href="#b"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            href="#b"
          >
            <Text
              as="a"
              className="bx--link"
              href="#b"
              rel={null}
            >
              <a
                className="bx--link"
                dir="auto"
                href="#b"
                rel={null}
              >
                B
              </a>
            </Text>
          </Link>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        href="#c"
        isCurrentPage={true}
      >
        <li
          className="bx--breadcrumb-item bx--breadcrumb-item--current"
        >
          <Link
            href="#c"
          >
            <Text
              as="a"
              className="bx--link"
              href="#c"
              rel={null}
            >
              <a
                className="bx--link"
                dir="auto"
                href="#c"
                rel={null}
              >
                C
              </a>
            </Text>
          </Link>
        </li>
      </BreadcrumbItem>
    </ol>
  </nav>
</Breadcrumb>
`;

exports[`Breadcrumb should support rendering the current page 2`] = `
<Breadcrumb>
  <nav
    aria-label="Breadcrumb"
  >
    <ol
      className="bx--breadcrumb"
    >
      <BreadcrumbItem
        href="#a"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            href="#a"
          >
            <Text
              as="a"
              className="bx--link"
              href="#a"
              rel={null}
            >
              <a
                className="bx--link"
                dir="auto"
                href="#a"
                rel={null}
              >
                A
              </a>
            </Text>
          </Link>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        href="#b"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            href="#b"
          >
            <Text
              as="a"
              className="bx--link"
              href="#b"
              rel={null}
            >
              <a
                className="bx--link"
                dir="auto"
                href="#b"
                rel={null}
              >
                B
              </a>
            </Text>
          </Link>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        aria-current="page"
        href="#c"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            aria-current="page"
            href="#c"
          >
            <Text
              aria-current="page"
              as="a"
              className="bx--link"
              href="#c"
              rel={null}
            >
              <a
                aria-current="page"
                className="bx--link"
                dir="auto"
                href="#c"
                rel={null}
              >
                C
              </a>
            </Text>
          </Link>
        </li>
      </BreadcrumbItem>
    </ol>
  </nav>
</Breadcrumb>
`;

exports[`Breadcrumb should support rendering without a trailing slash 1`] = `
<Breadcrumb
  noTrailingSlash={true}
>
  <nav
    aria-label="Breadcrumb"
  >
    <ol
      className="bx--breadcrumb bx--breadcrumb--no-trailing-slash"
    >
      <BreadcrumbItem
        href="www.carbondesignsystem.com"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            href="www.carbondesignsystem.com"
          >
            <Text
              as="a"
              className="bx--link"
              href="www.carbondesignsystem.com"
              rel={null}
            >
              <a
                className="bx--link"
                dir="auto"
                href="www.carbondesignsystem.com"
                rel={null}
              >
                Breadcrumb 1
              </a>
            </Text>
          </Link>
        </li>
      </BreadcrumbItem>
    </ol>
  </nav>
</Breadcrumb>
`;
